--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -396,6 +396,7 @@
 #define TR_MODELNAME           "Nome modello"
 #define TR_PHASENAME           "Nome fase"
 #define TR_MIXNAME             "Nome mix"
+#define TR_INPUTNAME           "Input Name"
 #if defined(PCBTARANIS)
   #define TR_EXPONAME          "Nome expo"
 #else
