--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -396,6 +396,7 @@
 #define TR_MODELNAME           "Modell Name"
 #define TR_PHASENAME           "Phase Name"
 #define TR_MIXNAME             "Mix Name"
+#define TR_INPUTNAME           "Input Name"
 #if defined(PCBTARANIS)
   #define TR_EXPONAME          "Linie Name"
 #else
