--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -762,6 +762,7 @@
 #define TR_CHR_LONG            'l'
 #define TR_CHR_TOGGLE          't'
 #define TR_CHR_HOUR            'h'
+#define TR_CHR_INPUT           'F'   // Values between A-I will work
 
 #define TR_BEEP_VOLUME         "Volym Pip"
 #define TR_WAV_VOLUME          "Volym Wav"
