--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -1,4 +1,4 @@
-﻿/*
+﻿﻿/*
  * Authors (alphabetical order)
  * - Bertrand Songis <bsongis@gmail.com>
  * - Bernet Andre <bernet.andre@gmail.com>
@@ -70,6 +70,9 @@
 
 #define LEN_UART3MODES   "\017"
 #define TR_UART3MODES    "OFF\0           ""SPORT Mirror\0  ""Virtual SP2UART"
+
+#define LEN_POTTYPES     "\017"
+#define TR_POTTYPES      "Pot\0           ""Multipos Switch"
 
 #define LEN_DATETIME     "\005"
 #define TR_DATETIME      "DATE:""HEURE"
@@ -680,6 +683,8 @@
 #define TR_PERSISTENT_MAH      TR(INDENT "Enr. mAh",INDENT "Enregistrer mAh")
 #define TR_FAS_OFFSET          TR(INDENT "Corr FAS", INDENT "Correction FAS")
 #define TR_UART3MODE           "Port série"
+#define TR_POT1TYPE            "S1 Type"
+#define TR_POT2TYPE            "S2 Type"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL  "RSSI Max"
