--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -683,20 +683,20 @@
 #define TR_PERSISTENT_MAH      INDENT "Zapisz mAh"
 #define TR_FAS_OFFSET          TR(INDENT "FAS Ofs", INDENT "FAS Offset")
 #define TR_UART3MODE           "Port szreg."
-#define TR_POT1TYPE            "S1 Type"
-#define TR_POT2TYPE            "S2 Type"
+#define TR_POT1TYPE            "Typ P1"
+#define TR_POT2TYPE            "Typ P2"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL  "Max RSSI"
   #define TR_MAVLINK_PC_RSSI_EN_LABEL     "PC RSSI EN"
-  #define TR_MAVMENUSETUP_TITLE           "Mavlink Setup"
+  #define TR_MAVMENUSETUP_TITLE           "Ustawienia Mavlink"
   #define TR_MAVLINK_BAUD_LABEL           "Baudrate"
   #define TR_MAVLINK_INFOS                "INFO"
   #define TR_MAVLINK_MODE                 "TRYB"
   #define TR_MAVLINK_CUR_MODE             "Aktualy Tryb"
   #define TR_MAVLINK_ARMED                "Armed"
   #define TR_MAVLINK_BAT_MENU_TITLE       "BAT RSSI"
-  #define TR_MAVLINK_BATTERY_LABEL        "Status baterii "
+  #define TR_MAVLINK_BATTERY_LABEL        "Status bateri"
   #define TR_MAVLINK_RC_RSSI_LABEL        "RC RSSI"
   #define TR_MAVLINK_PC_RSSI_LABEL        "PC RSSI"
   #define TR_MAVLINK_NAV_MENU_TITLE       "NAV"
@@ -773,7 +773,7 @@
 #define TR_BEEP_VOLUME         "Głośność pikania"
 #define TR_WAV_VOLUME          "Głośność wav"
 #define TR_VARIO_VOLUME        "Głośność wario"
-#define TR_BG_VOLUME           "Głośnośc tła "
+#define TR_BG_VOLUME           "Głośność tła "
 
 #define TR_TOP_BAR             "Górny Pasek"
 #define TR_ALTITUDE            INDENT "Wysokość"
