--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -69,10 +69,10 @@
 #define TR_TRNCHN        "CH1CH2CH3CH4"
 
 #define LEN_UART3MODES   "\017"
-#define TR_UART3MODES    "OFF\0           ""S-Port Mirror\0 ""Virtual SP2UART"
+#define TR_UART3MODES    "OFF\0           ""Recopie S-Port\0""Debug\0"
 
 #define LEN_POTTYPES     "\017"
-#define TR_POTTYPES      "Pot\0           ""Multipos Switch"
+#define TR_POTTYPES      "Potentiomètre\0 ""Inter multi-pos"
 
 #define LEN_DATETIME     "\005"
 #define TR_DATETIME      "DATE:""HEURE"
@@ -683,8 +683,8 @@
 #define TR_PERSISTENT_MAH      TR(INDENT "Enr. mAh",INDENT "Enregistrer mAh")
 #define TR_FAS_OFFSET          TR(INDENT "Corr FAS", INDENT "Correction FAS")
 #define TR_UART3MODE           "Port série"
-#define TR_POT1TYPE            "S1 Type"
-#define TR_POT2TYPE            "S2 Type"
+#define TR_POT1TYPE            "Type S1"
+#define TR_POT2TYPE            "Type S2"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL  "RSSI Max"
