--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -386,7 +386,7 @@
 #define TR_POPUPS              TR_ENTER"\010[EXIT]"
 #define OFS_EXIT               sizeof(TR_ENTER)
 
-#define TR_MENUWHENDONE        CENTER "\006" TR_ENTER " Avslutar "
+#define TR_MENUWHENDONE        CENTER "\011" TR_ENTER " Avslutar "
 #define TR_FREE                "kvar"
 #define TR_DELETEMODEL         "Radera Modell"
 #define TR_COPYINGMODEL        "Kopierar Modell "
@@ -490,9 +490,9 @@
 #define TR_CAL                 "Kalib."
 #define TR_VTRIM               "Trim- +"
 #define TR_BG                  "BG:"
-#define TR_MENUTOSTART         CENTER "\006" TR_ENTER " Startar "
-#define TR_SETMIDPOINT         CENTER "\010Centrera Allt"
-#define TR_MOVESTICKSPOTS      CENTER "\004Rör Rattar/Spakar"
+#define TR_MENUTOSTART         CENTER "\011" TR_ENTER " Startar "
+#define TR_SETMIDPOINT         TR(CENTER "\012Centrera Allt",CENTER "\013Centrera Allt")
+#define TR_MOVESTICKSPOTS      TR(CENTER "\005Rör Rattar/Spakar",CENTER "\006Rör Rattar/Spakar")
 #define TR_RXBATT              "Rx Batt:"
 #define TR_TXnRX               "Tx:\0Rx:"
 #define OFS_RX                 4
