--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -505,6 +505,7 @@
 #define TR_SPLASHSCREEN        "Logo d'accueil"
 #define TR_THROTTLEWARNING     "Alerte gaz"
 #define TR_SWITCHWARNING       TR("Alerte int","Alerte interrupt.")
+#define TR_POTWARNING          TR("Alerte pot","Alerte potentiom.")
 #define TR_TIMEZONE            "Fuseau horaire"
 #define TR_RXCHANNELORD        TR("Ordre voies RX","Ordre des voies préféré")
 #define TR_SLAVE               "Elève"
@@ -611,7 +612,7 @@
 #define TR_EEPROMWARN          "EEPROM"
 #define TR_THROTTLEWARN        "GAZ"
 #define TR_ALARMSWARN          "SON"
-#define TR_SWITCHWARN          "INTERS"
+#define TR_SWITCHWARN          TR("INTERS","CONTROLES")
 #define TR_INVERT_THR          "Inverser Gaz?"
 #define TR_SPEAKER_VOLUME      INDENT "Volume"
 #define TR_LCD                 "Afficheur"
@@ -698,6 +699,7 @@
 #define TR_LOWALARM            INDENT "Alarme basse"
 #define TR_CRITICALALARM       INDENT "Alarme critique"
 #define TR_PERSISTENT_MAH      TR(INDENT "Enr. mAh",INDENT "Enregistrer mAh")
+#define TR_CHECKLIST           "Afficher notes"
 #define TR_FAS_OFFSET          TR(INDENT "Corr FAS", INDENT "Correction FAS")
 #define TR_UART3MODE           "Port série"
 #define TR_POT1TYPE            "Type S1"
