--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -655,6 +655,7 @@
 #define TR_SD_SIZE             "Gr\203\206e:"
 #define TR_TYPE                "Typ"
 #define TR_GLOBAL_VARS         "Globale Variablen"
+#define TR_GLOBAL_V            "GLOBAL V."
 #define TR_GLOBAL_VAR          "Global Variable"
 #define TR_MENUGLOBALVARS      "GLOBALE VARIABLEN"
 #define TR_OWN                 "Eigen"
