--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -655,6 +655,7 @@
 #define TR_SD_SIZE             "Tamanho"
 #define TR_TYPE                "Tipe"
 #define TR_GLOBAL_VARS         "Variaveis"
+#define TR_GLOBAL_V            "GLOBAL V."
 #define TR_GLOBAL_VAR          "Global Variable"
 #define TR_MENUGLOBALVARS      "VARIAVEIS"
 #define TR_OWN                 "Propr."
