--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -655,6 +655,7 @@
 #define TR_SD_SIZE             "Strl:"
 #define TR_TYPE                "Typ "
 #define TR_GLOBAL_VARS         "Globala Variabler"
+#define TR_GLOBAL_V            "GLOBAL V."
 #define TR_GLOBAL_VAR          "Global Variabel"
 #define TR_MENUGLOBALVARS      "Globala Variabler"
 #define TR_OWN                 "Egen"
